--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ body {
 
 /* Completed */
 .completed .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
