--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .add-task__row-wrapper {
@@ -133,7 +133,7 @@ body {
 }
 
 .list-item >    .input__text {
-  width: 226px
+  width: 226px;
 }
 
 .button-delete .button-delete__img {
@@ -154,12 +154,12 @@ body {
 
 /* Edit Task */
 .list .input__text {
-  display:none
+  display:none;
 }
 
 .list .edit-mode .input__text {
   display:inline-block;
-  width:224px
+  width:224px;
 }
 
 .list .edit-mode .label {
