--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .header .header__link {
-  font-family: fantasy, cursive;
+  font-family: Fantasy, cursive;
 }
 
 @media (max-width:768px) {
@@ -40,7 +40,7 @@ body {
   flex-grow: 1;
 }
 
-.add-task__row-wrapper {
+.add-task .add-task__row-wrapper {
   display: flex;
 }
 
